# qml_feather

./: .gitignore  CMakeLists.txt
src/: CanvasProvider.cpp  CanvasProvider.h  FeatherWidget.cpp  FeatherWidget.h  feather.qml  main.cpp  qml.qrc
